# crypto-wallet-tracking

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
docs/: alchemy-technical-overview.md  show-current-wallet-assets.md
scripts/: __init__.py  show_current_wallet_assets.py
scripts/lib/: __init__.py  alchemy_client.py  chain_scanners.py  formatters.py  models.py
tests/: conftest.py  test_alchemy_client.py  test_chain_scanners.py  test_cli.py  test_formatters.py  test_models.py
